--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <p>The choice is a leading platform that streamlines travel and accommodation planning with a wide selection of options and personalized services. 
       Our expert team curates luxury hotels, stylish itineraries, and refined experiences to suit all travelers’ unique tastes and needs. 
       We offer exclusive recommendations, local guides, and cutting-edge tech to keep your journey seamless and inspiring from start to finish. 
-      In addition to travel, thechoice provides access to luxury apparel and advanced technology, ensuring you travel in style and sophistication.
+      In addition to travel, thechoice provides access to luxury apparel, ensuring you travel in style and sophistication.
     </p>
   </main>
     <footer class="container site-footer" role="contentinfo">
