--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,10 @@
   <input type="email" name="email"id="email"required>
   </div><br>
   <div class="field">
+  <label for="phone-number">Phone number</label>
+  <input type="tel" name="phone"id="phone-number"required>
+  </div>
+  <div class="field">
    <label for="message">Leave message</label>
    <textarea id="message" name="message" rows="4" placeholder="more help leave message or comment"></textarea>
   </div>
