--- a/booking.html
+++ b/booking.html
@@ -8,13 +8,13 @@
   <title>Thechoice</title>
 
 </head>
-<body>
+<body class="booking-page">
   <header class="site-header">
   <!-- Hamburger button -->
   <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">
     ☰
   </button>
-
+   
   <nav class="nav" id="main-nav">
     <a href="index.html">TheChoice</a>
     <a href="about.html">About</a>
